--- a/index.html
+++ b/index.html
@@ -1,47 +1,42 @@
 <!doctype html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="data:/" type="image/x-icon" />
-    <title>frontend</title>
+    <title>Najs frontend</title>
   </head>
   <body>
     <header>
-      <h2>Frontend</h2>
+      <h2>Najs frontend</h2>
     </header>
     <main>
-      <input id="endpoint" value="/" />
+      <label>Port: <input id="port" value="3007" /></label>
+      <label>Endpoint: <input id="endpoint" value="/products" /></label>
+      <button onclick="location.reload()">GET</button>
       <h3>Data laddad från backend:</h3>
-      <script>
-        window.addEventListener("load", async () => {
-          const container = document.querySelector("tbody");
-          container.innerHTML = "<tr><td>Loading...</td></tr>";
-          const data = await fetch(
-            "http://localhost:3007" + document.getElementById("endpoint").value,
-          ).then((res) => res.json());
-          container.innerHTML = "";
-          for (let row of data) {
-            const rowContainer = document.createElement("tr");
-            for (let colName in row) {
-              const columnContainer = document.createElement("td");
-              columnContainer.textContent = row[colName];
-              rowContainer.appendChild(columnContainer);
-            }
-            container.appendChild(rowContainer);
-          }
-        });
-      </script>
-      <table>
-        <tbody></tbody>
-      </table>
+      <table id="table"></table>
     </main>
     <footer>
       <p>
-        &copy; 2026 Throwaway Frontendprojekt.
-        <b><i>Upphovsrättsbrott beivras.</i></b>
+        &copy; 2026 Najs frontendprojekt.
+        <b><i>Upphovsrättsbrott beivras ej.</i></b>
       </p>
     </footer>
+    <script>
+      addEventListener("load", async () => {
+        data = await fetch(
+          `http://localhost:${port.value}${endpoint.value}`,
+        ).then((res) => res.json());
+        table.innerHTML =
+          `<tr>${Object.keys(data[0]).map((name) => `<td><b>${name}</b></td>`)
+            .join``}</tr>` +
+          data.map(
+            (row) =>
+              `<tr>${Object.values(row).map((col) => `<td>${col}</td>`)
+                .join``}</tr>`,
+          ).join``;
+      });
+    </script>
   </body>
 </html>
