Added search function Saved

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
           ).join``;
 
         // Används/funkar ej
-        searchBtn.addEventListener("submit", async (event) => {
+        /* searchBtn.addEventListener("submit", async (event???) => {
           data = await fetch(
             `http://localhost:${port.value}/products?search=${searchField.value}`,
           ).then((res) => res.json());
@@ -81,7 +81,7 @@
         /* console.log(searchField.value);
         console.log(port.value);
         console.log(endpoint.value);
-        console.log(data);
+        console.log(data); */
       });
 
       /* searchForm.addEventListener("submit", (event) => {
